# SecondMind

./: .env  .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  routes.py  schemas.py
app/generation/: __init__.py  llm.py  prompt.py
app/ingestion/: __init__.py  chunker.py  embedder.py  loader.py  pipeline.py
app/retrieval/: retriever.py
app/vectorstore/: __init__.py  store.py
data/chroma_db/5bfaa209-e98f-491b-8fd5-4dee1a04b8a5/: index_metadata.pickle
tests/: test_api.py  test_embedder.py  test_ingestion.py  test_retrieval.py
