[project]
name = "secondmind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.29",
    "uvicorn>=0.47.0",
]
